1. 升级gradle版本和一些依赖库版本。 2. 由于javafx的原因，使用插件打包fatjar。